commit primeira parte do feed pre feita

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CloneFeed</string>
+    <string name="contect">Vcs k têm como apelido nome de um país, cidade ou mesmo animal cheguem so aki e expliquem a vossa árvore genealógica 🤔</string>
 </resources>
