--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">CloneFeed</string>
     <string name="contect">Vcs k têm como apelido nome de um país, cidade ou mesmo animal cheguem so aki e expliquem a vossa árvore genealógica 🤔</string>
     <string name="postSubtitle">"VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST   VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST   VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST   VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST  VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST   VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST    VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST   VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST   VAGNER.BJ.ST "</string>
-    <string name="Like">Gosto</string>
-    <string name="comentar">Comentar</string>
-    <string name="copartilar">Compartilhar</string>
+    <string name="Like">Like</string>
+    <string name="comentar">Comment</string>
+    <string name="copartilar">Share</string>
 </resources>
