commit adicionar o toobar e o Tablayout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="Like">Like</string>
     <string name="comentar">Comment</string>
     <string name="copartilar">Share</string>
+    <string name="search">Search</string>
 </resources>
